--- a/index.html
+++ b/index.html
@@ -7,11 +7,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Sitio oficial de Diego García Candal, piloto de automovilismo. Carrera, noticias, calendario y galería de competición." />
+  <link rel="modulepreload" href="/src/main.tsx">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://res.cloudinary.com">
+  <link rel="dns-prefetch" href="https://res.cloudinary.com">
+  <link rel="preload" as="style"
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Racing+Sans+One&display=swap">
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Racing+Sans+One&display=swap"
-    rel="stylesheet">
+    rel="stylesheet" media="print" onload="this.media='all'">
+  <style>
+    body {
+      background-color: #f7f8f9;
+      color: #1a1a1a;
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+    }
+
+    h1,
+    h2,
+    h3 {
+      font-family: 'Racing Sans One', serif;
+    }
+  </style>
+  <noscript>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Racing+Sans+One&display=swap"
+      rel="stylesheet">
+  </noscript>
   <title>diego-garcia</title>
 </head>
 
